# Employee-Work-Tracker

./: .dockerignore  .env  .env.example  Dockerfile  LICENSE  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  implementation_plan.md  inspect_data.py  main.py  pyproject.toml  reset_db_passwords.py
apps/accounts/: forms.py  urls.py  views.py
apps/core/: admin.py  context_processors.py  forms.py  middleware.py  mixins.py  models.py  urls.py  utils.py  views.py
apps/dashboard/: urls.py  views.py
apps/employees/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/notifications/: admin.py  context_processors.py  models.py  urls.py  views.py
apps/reports/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
static/css/: style.css
staticfiles/css/: style.css
staticfiles/js/: app.js
templates/: base.html
templates/accounts/: change_password.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html
templates/core/: activity_log_list.html  company_settings.html
templates/dashboard/: admin_dashboard.html  employee_dashboard.html
templates/employees/: department_confirm_delete.html  department_form.html  department_list.html  designation_confirm_delete.html  designation_form.html  designation_list.html  employee_confirm_delete.html  employee_detail.html  employee_form.html  employee_list.html  profile_edit.html  (+1 more)
(+17 files in other folders)
